# k23

./: .buckconfig  .gitignore  AGENTS.md  BUCK  CLAUDE.md  Cargo.toml  LICENSE_MIT  PACKAGE  README.md  REVIEW.md  X86_LOADER_QA.md  book.toml  deny.toml  err.txt  flake.nix  justfile  out.iso  qemu.dtb  reindeer.toml  release-plz.toml  relocs.txt  renovate.json5  result  rust-toolchain.toml  rustc-ice-2026-01-24T12_46_13-58234.txt  rustc-ice-2026-01-25T20_12_06-41842.txt  rustc-ice-2026-01-25T20_36_50-49326.txt  rustfmt.toml  sample.txt  standalone.cmake  typos.toml
_old/kernel/: Cargo.toml  riscv64-virt.ld
_old/kernel/src/: main.rs  panic.rs
crates/cranelift-codegen/: Cargo.toml
crates/cranelift-codegen/meta/: Cargo.toml
crates/cranelift-codegen/src/: dominator_tree.rs  egraph.rs  opts.rs  remove_constant_phis.rs  settings.rs  souper_harvest.rs
crates/kernel/: Cargo.toml  build.rs  full.wasm  riscv64-virt.ld
crates/kernel/src/: backtrace.rs  board_info.rs  error.rs  logger.rs  main.rs  paging.rs  panic.rs  start.rs  trap.rs  uart.rs  unwind.rs
fuzz/: Cargo.toml
fuzz/artifacts/range-tree_fuzz/: crash-909e023eaf31b43ff367d83db5a9d641cb4569f4
fuzz/fuzz_targets/: range_tree.rs
kernel/: Cargo.toml  build.rs  default.nix  fib_cpp.wasm  fib_cpp.wat  fib_test.wasm  fib_test.wat  host_func_test.wat  hostfunc_rs.rs  hostfunc_rs.wasm  hostfunc_rs.wat  hostfunc_wat.wasm  hostfunc_wat.wat  riscv64-qemu.ld  riscv64-virt.ld  riscv64gc-k23-none-kernel.json
kernel/src/: __logger.rs  _wasm.rs  allocator.rs  boot_info.rs  bootargs.rs  cmdline.rs  constants.rs  cpu_local.rs  cpu_set.rs  device_tree.rs  error.rs  fiber.rs  frame_alloc.rs  hart_local.rs  heap.rs  irq.rs  kconfig.rs  kernel_mapper.rs  lib.rs  logger.rs  machine_info.rs  main.rs  metrics.rs  panic.rs  runtime.rs  shell.rs  stack_guard.rs  start.rs  state.rs  tests.rs  thread_local.rs  time.rs  trap_handler.rs  traps.rs  vm.rs
kernel/src/_runtime/: builtins.rs  code_memory.rs  const_expr.rs  engine.rs  mod.rs  module.rs  store.rs
kernel/src/_task/: error.rs  join_handle.rs  mod.rs  owned_tasks.rs  raw.rs  references.rs  waker.rs
kernel/src/allocator/: heap.rs  locked.rs  mod.rs  slab.rs  tracking.rs
kernel/src/arch/: mod.rs  riscv64.rs  unsupported.rs
kernel/src/async_rt/: mod.rs  queue.rs  yield_now.rs
kernel/src/backtrace/: mod.rs  print.rs  symbolize.rs
kernel/src/executor/: mod.rs  queue.rs  wake_list.rs  yield_now.rs
kernel/src/frame_alloc/: arena.rs  frame.rs  frame_list.rs  mod.rs
kernel/src/mem/: address.rs  address_space.rs  address_space_region.rs  bootstrap_alloc.rs  flush.rs  mmap.rs  mod.rs  provider.rs  trap_handler.rs  user_alloc.rs  user_mmap.rs  vmo.rs
kernel/src/old/: fiber.rs  func.rs  global.rs  instance.rs  instance_allocator.rs  linker.rs  memory.rs  module.rs  store.rs  table.rs  trap_handler.rs
kernel/src/rt/: const_expr.rs  instance.rs  module.rs  store.rs  table.rs  utils.rs  vmcontext.rs
kernel/src/runtime/: allocator.rs  builtins.rs  const_expr.rs  engine.rs  error.rs  errors.rs  instance.rs  instantiate.rs  linker.rs  memory.rs  mod.rs  module.rs  store.rs  table.rs  trap.rs  utils.rs  vmcontext.rs
kernel/src/scheduler/: idle.rs  mod.rs  park.rs  queue.rs  worker.rs  yield_now.rs
kernel/src/scheduler2/: context.rs  idle.rs  mod.rs  queue.rs  worker.rs
kernel/src/sync/: cache_padded.rs  error.rs  mod.rs  wait_cell.rs  wait_queue.rs
kernel/src/task/: id.rs  join_handle.rs  kernel.rs  mod.rs  owned_tasks.rs  raw.rs  references.rs  state.rs  waker.rs  wasm.rs
kernel/src/tests/: args.rs  host_funcs.rs  mod.rs  printer.rs  smoke.rs  wasm_spec.rs  wast.rs
kernel/src/time/: clock.rs  error.rs  instant.rs  mod.rs  sleep.rs  system_time.rs  timeout.rs  timer.rs
kernel/src/tracing/: filter.rs  log.rs  mod.rs  registry.rs  writer.rs
kernel/src/tracing_subscriber/: mod.rs  registry.rs
kernel/src/util/: atomic_cell.rs  atomic_waker.rs  condvar.rs  fast_rand.rs  maybe_uninit.rs  mod.rs  parking_spot.rs  send_sync_ptr.rs  uninhabited.rs  zip_eq.rs
kernel/src/utils/: cache_padded.rs  maybe_uninit.rs  mod.rs
kernel/src/vm/: address.rs  address_space.rs  address_space_region.rs  aspace.rs  bootstrap_alloc.rs  error.rs  flush.rs  frame_list.rs  mapping.rs  mmap.rs  mod.rs  paged_vmo.rs  provider.rs  trap_handler.rs  user_box.rs  user_mmap.rs  vmo.rs  wired_vmo.rs
kernel/src/wasm/: backtrace.rs  builtins.rs  code_registry.rs  compiler.rs  engine.rs  errors.rs  func.rs  func_env.rs  global.rs  hello_world.rs  indices.rs  instance.rs  instance_allocator.rs  linker.rs  memory.rs  mod.rs  module.rs  module_env.rs  module_registry.rs  store.rs  table.rs  tag.rs  trap.rs  trap_handler.rs  type_registry.rs  types.rs  utils.rs  values.rs  vmcontext.rs
kernel/tests/: fib-rs-release.wasm
lib/_kmem/: Cargo.toml
lib/backtrace/: BUCK  Cargo.toml
lib/mem-core/: BUCK  Cargo.toml  MODEL.md  TESTPLAN.md
lib/sharded-slab/: BUCK  Cargo.toml  README.md
libs/abort/: Cargo.toml
libs/addr2line/: Cargo.toml
libs/async/: Cargo.toml
libs/async-exec/: Cargo.toml
libs/async-kit/: Cargo.toml
libs/async-rt/: Cargo.toml
libs/backtrace/: Cargo.toml
libs/cpu-local/: Cargo.toml
libs/cranelift-codegen/: Cargo.toml  build.rs
libs/cranelift-frontend/: Cargo.toml
libs/cranelift-wasm/: Cargo.toml
libs/ecma-119/: Cargo.toml  assignment.md  guide.md  plan.md  todos.md
libs/fiber/: Cargo.toml  README.md
libs/gimli/: Cargo.toml
libs/kasync/: Cargo.toml
libs/kasync2/: Cargo.toml
libs/kbacktrace/: Cargo.toml
libs/kmem/: Cargo.toml
libs/kmem-core/: Cargo.toml
loader/: Cargo.toml  README.md  build.rs  default.nix  riscv64-qemu.ld  riscv64-virt.ld  riscv64imac-k23-none-loader.json  x86_64-qemu.ld
loader/_src/: kconfig.rs  kernel.rs  main.rs  map_elf.rs
loader/api/: Cargo.toml
loader/src/: boot_info.rs  constants.rs  elf.rs  error.rs  frame_alloc.rs  kaslr.rs  kconfig.rs  kernel.rs  logger.rs  machine_info.rs  main.rs  mapping.rs  page_alloc.rs  paging.rs  panic.rs  payload.rs  stack.rs  stack_vec.rs  used_tles.rs  used_tlps.rs  virt_alloc.rs  vm.rs
(+2022 files in other folders)
