[workspace]
members = ["build/toml-patch", "build/xtask", "libs/*", "kernel", "loader", "loader/api"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jonas Kruckenberg <iterpre@protonmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
# allow loom
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[workspace.lints.clippy]
# numeric safety
#arithmetic_side_effects = "deny" TODO audit arithmetic & reenable
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
cast_lossless = "deny"
default_numeric_fallback = "deny"
checked_conversions = "deny"
float_arithmetic = "deny"
float_cmp = "deny"

# pointer safety
cast_ptr_alignment = "deny"
ptr_as_ptr = "deny"
ptr_cast_constness = "deny"
ref_as_ptr = "deny"
transmute_ptr_to_ptr = "deny"

## panic safety
#indexing_slicing = "deny"
#panic = "deny"
#panic_in_result_fn = "deny"

# stack overflow prevention
large_futures = "deny"
large_stack_arrays = "deny"
large_stack_frames = "deny"
large_types_passed_by_value = "deny"
recursive_format_impl = "deny"

# style
undocumented_unsafe_blocks = "deny"
as_underscore = "deny"
alloc_instead_of_core = "deny"
#allow_attributes = "deny"
allow_attributes_without_reason = "deny"
default_trait_access = "deny"
cloned_instead_of_copied = "deny"
fn_params_excessive_bools = "deny"
struct_excessive_bools = "deny"
filter_map_next = "deny"
explicit_iter_loop = "deny"
flat_map_option = "deny"
iter_filter_is_ok = "deny"
iter_filter_is_some = "deny"
manual_assert = "deny"
manual_is_power_of_two = "deny"
manual_is_variant_and = "deny"
manual_let_else = "deny"
manual_ok_or = "deny"
match_bool = "deny"
missing_fields_in_debug = "deny"
semicolon_if_nothing_returned = "deny"
trivially_copy_pass_by_ref = "deny"
unnecessary_wraps = "deny"
unnested_or_patterns = "deny"
too_many_arguments = "allow"

# docs
missing_panics_doc = "deny"
missing_errors_doc = "deny"

[workspace.dependencies]
addr2line = { path = "libs/addr2line" }
backtrace = { path = "libs/backtrace" }
fdt = { path = "libs/fdt" }
fiber = { path = "libs/fiber" }
panic-unwind = { path = "libs/panic-unwind" }
riscv = { path = "libs/riscv" }
spin = { path = "libs/spin" }
unwind2 = { path = "libs/unwind2" }
loader-api = { path = "loader/api" }
abort = { path = "libs/abort" }
linked-list = { path = "libs/linked-list" }
mpsc-queue = { path = "libs/mpsc-queue" }
util = { path = "libs/util" }
async-rt = { path = "libs/async-rt" }
sync = { path = "libs/sync" }
fastrand = { path = "libs/fastrand" }
cpu-local = { path = "libs/cpu-local" }

# 3rd-party dependencies
anyhow = { version = "1.0.97", default-features = false }
cfg-if = "1.0.0"
bitflags = "2.9.0"
lock_api = "0.4.12"
gimli = { version = "0.31.1", default-features = false, features = ["read"] }
fallible-iterator = { version = "0.3.0", default-features = false }
xmas-elf = "0.10.0"
rustc-demangle = "0.1"
arrayvec = { version = "0.7.6", default-features = false }
smallvec = { version = "1", default-features = false }
rand = { version = "0.9.1", default-features = false }
rand_chacha = { version = "0.9.0", default-features = false }
log = "0.4.27"
tracing = { version = "0.2", git = "https://github.com/tokio-rs/tracing", branch = "master", default-features = false, features = ["attributes"] }
tracing-core = { version = "0.2", git = "https://github.com/tokio-rs/tracing", branch = "master", default-features = false }
talc = { version = "4.4.2", default-features = false, features = ["lock_api", "counters"] }
bumpalo = "3.17.0"
ouroboros = "0.18.5"
hashbrown = { version = "0.15", default-features = false, features = [
    "inline-more",
    "nightly",
    "default-hasher",
] }
static_assertions = "1.1.0"
mycelium-bitfield = "0.1.5"
pin-project = "1.1.10"
loom = "0.7"

# wast dependencies
unicode-width = { version = "0.2.0" }
memchr = { version = "2.7.4", default-features = false }
leb128fmt = { version = "0.1.0", default-features = false }
wasm-encoder = { version = "0.228.0", default-features = false }

# build dependencies
color-eyre = "0.6.3"
eyre = "0.6.12"
clap = { version = "4.2.7", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
indexmap = { version = "2.9.0", features = ["serde"] }
toml_edit = "0.22.24"
indoc = "2.0.6"

# We want debug symbols on profile binaries by default. We can always strip them
# out later if necessary.
[profile.bench]
debug = true
