[package]
name = "range-tree-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys.workspace = true
arbitrary.workspace = true

# crates being fuzzed
range-tree.workspace = true

[[bin]]
name = "range-tree"
path = "fuzz_targets/range_tree.rs"
test = false
doc = false
bench = false
