[package]
name = "range-tree-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.4.2", features = ["derive"] }

# crates being fuzzed
range-tree = { path = "../libs/range-tree" }

[[bin]]
name = "range-tree"
path = "fuzz_targets/range_tree.rs"
test = false
doc = false
bench = false

[profile.release]
debug-assertions = true
