[package]
name = "kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kernel"
harness = false

[dependencies]
loader-api.workspace = true
cpu-local.workspace = true
trap.workspace = true
spin = { workspace = true, features = ["thread-local", "lock_api"] }
unwind2.workspace = true
wavltree = { workspace = true, features = ["dot"] }
fdt.workspace = true
ksharded-slab.workspace = true
ktest.workspace = true
kaddr2line.workspace = true
uart-16550.workspace = true
wast.workspace = true
fastrand.workspace = true
abort.workspace = true
panic-unwind2.workspace = true
util.workspace = true
kasync = { workspace = true, features = ["panic-unwind2", "counters"] }

# 3rd-party dependencies
rustc-demangle.workspace = true
log.workspace = true
cfg-if.workspace = true
talc.workspace = true
static_assertions.workspace = true
arrayvec.workspace = true
bitflags.workspace = true
xmas-elf.workspace = true
fallible-iterator.workspace = true
rand_chacha.workspace = true
rand.workspace = true
pin-project.workspace = true
smallvec.workspace = true
hashbrown.workspace = true
gimli.workspace = true
bumpalo.workspace = true
ouroboros.workspace = true
mycelium-bitfield.workspace = true
tracing.workspace = true
tracing-core.workspace = true
anyhow.workspace = true
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
cordyceps.workspace = true

wasmparser.workspace = true
target-lexicon.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-entity.workspace = true
wasmtime-slab.workspace = true

[target.'cfg(any(target_arch = "riscv64", target_arch = "riscv32"))'.dependencies]
riscv.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86.workspace = true

[build-dependencies]
vergen-git2 = { version = "1.0.7", features = ["build", "cargo", "rustc"] }

[lints]
workspace = true
