[package]
name = "kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kernel"
harness = false

[dependencies]
loader-api.workspace = true
k23-cpu-local.workspace = true
trap.workspace = true
k23-spin = { workspace = true, features = ["thread-local"] }
k23-unwind.workspace = true
wavltree = { workspace = true, features = ["dot"] }
k23-fdt.workspace = true
k23-sharded-slab.workspace = true
ktest.workspace = true
k23-addr2line.workspace = true
uart-16550.workspace = true
k23-wast.workspace = true
k23-fastrand.workspace = true
k23-abort.workspace = true
k23-panic-unwind.workspace = true
k32-util.workspace = true
kasync = { workspace = true, features = ["k23-unwind", "counters"] }
kmem.workspace = true

# 3rd-party dependencies
rustc-demangle.workspace = true
log.workspace = true
cfg-if.workspace = true
talc.workspace = true
static_assertions.workspace = true
k23-arrayvec.workspace = true
bitflags.workspace = true
xmas-elf.workspace = true
fallible-iterator.workspace = true
rand_chacha.workspace = true
rand.workspace = true
pin-project.workspace = true
smallvec.workspace = true
hashbrown.workspace = true
gimli.workspace = true
bumpalo.workspace = true
ouroboros.workspace = true
mycelium-bitfield.workspace = true
tracing.workspace = true
tracing-core.workspace = true
anyhow.workspace = true
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
cordyceps.workspace = true

wasmparser.workspace = true
target-lexicon.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-entity.workspace = true
wasmtime-slab.workspace = true

[target.'cfg(any(target_arch = "riscv64", target_arch = "riscv32"))'.dependencies]
k23-riscv.workspace = true

[lints]
workspace = true
