[package]
name = "kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kernel"
harness = false

[dependencies]
loader-api.workspace = true
kcpu-local.workspace = true
trap.workspace = true
kspin = { workspace = true, features = ["thread-local"] }
kunwind.workspace = true
wavltree = { workspace = true, features = ["dot"] }
kfdt.workspace = true
ksharded-slab.workspace = true
ktest.workspace = true
kaddr2line.workspace = true
kuart-16550.workspace = true
kwast.workspace = true
kfastrand.workspace = true
kabort.workspace = true
kpanic-unwind.workspace = true
kutil.workspace = true
kasync = { workspace = true, features = ["kunwind", "counters"] }
kmem-core.workspace = true

# 3rd-party dependencies
rustc-demangle.workspace = true
log.workspace = true
cfg-if.workspace = true
talc.workspace = true
static_assertions.workspace = true
karrayvec.workspace = true
bitflags.workspace = true
xmas-elf.workspace = true
fallible-iterator.workspace = true
rand_chacha.workspace = true
rand.workspace = true
pin-project.workspace = true
smallvec.workspace = true
hashbrown.workspace = true
gimli.workspace = true
bumpalo.workspace = true
ouroboros.workspace = true
mycelium-bitfield.workspace = true
tracing.workspace = true
tracing-core.workspace = true
anyhow.workspace = true
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
cordyceps.workspace = true

wasmparser.workspace = true
target-lexicon.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-entity.workspace = true
wasmtime-slab.workspace = true

[target.'cfg(any(target_arch = "riscv64", target_arch = "riscv32"))'.dependencies]
riscv.workspace = true

[lints]
workspace = true
