[package]
name = "loader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "loader"
harness = false

[dependencies]
loader-api.workspace = true
spin.workspace = true
fdt.workspace = true
abort.workspace = true

# third-party dependencies
log.workspace = true
cfg-if.workspace = true
rand_chacha.workspace = true
rand.workspace = true
arrayvec.workspace = true
xmas-elf.workspace = true
fallible-iterator.workspace = true
bitflags.workspace = true

[target.'cfg(any(target_arch = "riscv64", target_arch = "riscv32"))'.dependencies]
riscv.workspace = true

[lints]
workspace = true