[package]
name = "kernel"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onlyerror.workspace = true
spin.workspace = true
dtb-parser = { path = "../dtb-parser" }
uart-16550 = { path = "../uart-16550" }
log.workspace = true
riscv.workspace = true
linked_list_allocator = "0.10.5"
gimli = { version = "0.28.0", default-features = false, features = ["read-core"] }