[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[dependencies]
dtb-parser.workspace = true
uart-16550.workspace = true
sbicall.workspace = true
log.workspace = true
bitflags.workspace = true
onlyerror.workspace = true
riscv.workspace = true
linked_list_allocator.workspace = true
cfg-if.workspace = true
gimli = { workspace = true, features = ["read-core"] }
kmem.workspace = true
#cranelift-wasm.workspace = true
#cranelift-codegen.workspace = true
#cranelift-frontend.workspace = true
#wasmparser.workspace = true
