[package]
name = "_kmem"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wavltree = { workspace = true, features = ["dot"] }
cpu-local.workspace = true

# 3rd-party dependencies
lock_api.workspace = true
anyhow.workspace = true
mycelium-bitfield.workspace = true
pin-project.workspace = true
rand_chacha.workspace = true
rand.workspace = true
smallvec.workspace = true
cordyceps.workspace = true
fallible-iterator.workspace = true

[dev-dependencies]
proptest.workspace = true
libm.workspace = true

[lints]
workspace = true
