[package]
name = "sharded-slab"
version = "0.1.7"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
edition.workspace = true
license = "MIT"
keywords = ["slab", "allocator", "lock-free", "atomic"]
categories = ["memory-management", "data-structures", "concurrency"]
description = """
A lock-free concurrent slab.
"""

[dependencies]
log.workspace = true
spin.workspace = true
cpu-local.workspace = true

[features]
loom = []

[lints]
workspace = true
