[package]
name = "k23-abort"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# 3rd-party dependencies
cfg-if.workspace = true

[target.'cfg(any(target_arch = "riscv64", target_arch = "riscv32"))'.dependencies]
k23-riscv.workspace = true

[lints]
workspace = true
