[package]
name = "async-exec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
util.workspace = true
spin.workspace = true
mpsc-queue.workspace = true
cpu-local.workspace = true
fastrand.workspace = true
unwind2 = { workspace = true, optional = true }
panic-unwind2 = { workspace = true, optional = true }

# 3rd-party dependencies
cfg-if.workspace = true
tracing.workspace = true
static_assertions.workspace = true
mycelium-bitfield.workspace = true
anyhow.workspace = true

[dev-dependencies]
async-exec = { path = ".", features = ["std"] }
tracing-subscriber = { workspace = true, default-features = true, features = ["env-filter"] }
lazy_static = "1.5.0"

[target.'cfg(loom)'.dependencies]
loom.workspace = true

[features]
std = []
unwind2 = ["dep:unwind2"]

[lints]
workspace = true
