[package]
name = "async-kit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mpsc-queue.workspace = true
linked-list.workspace = true
spin.workspace = true
util.workspace = true

# 3rd-party dependencies
cfg-if.workspace = true
tracing.workspace = true
mycelium-bitfield.workspace = true
static_assertions.workspace = true
pin-project.workspace = true
bitflags.workspace = true
arrayvec.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[target.'cfg(target_os = "none")'.dependencies]
panic-unwind.workspace = true

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints]
workspace = true
