[package]
name = "async-rt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
util.workspace = true
linked-list.workspace = true
mpsc-queue.workspace = true
spin.workspace = true

# 3rd-party dependencies
mycelium-bitfield.workspace = true
static_assertions.workspace = true
cfg-if.workspace = true

[target.'cfg(target_os = "none")'.dependencies]
panic-unwind.workspace = true

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"
pin-project.workspace = true

[dev-dependencies]
test-log = "0.2.17"

[lints]
workspace = true
