[package]
name = "kasync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bench]]
required-features = ["__bench"]
name = "spawn"
harness = false

[dependencies]
kutil.workspace = true
kcpu-local.workspace = true
kspin.workspace = true
kfastrand.workspace = true
kpanic-unwind = { workspace = true, optional = true }
cordyceps.workspace = true
karrayvec.workspace = true

# 3rd-party dependencies
static_assertions.workspace = true
cfg-if.workspace = true
mycelium-bitfield.workspace = true
tracing.workspace = true
bitflags.workspace = true
pin-project.workspace = true
futures = { workspace = true, default-features = false }

[dev-dependencies]
tracing-subscriber = { workspace = true, default-features = true, features = ["env-filter"] }
lazy_static.workspace = true
criterion.workspace = true
futures = { workspace = true, features = ["alloc"] }

[target.'cfg(loom)'.dependencies]
loom.workspace = true

[features]
kunwind = ["dep:kpanic-unwind"]
counters = []
__bench = ["tracing/max_level_off"]

[lints]
workspace = true
