[package]
name = "kbacktrace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
kaddr2line.workspace = true
karrayvec.workspace = true
kunwind.workspace = true

# 3rd-party dependencies
gimli.workspace = true
xmas-elf.workspace = true
rustc-demangle.workspace = true
fallible-iterator.workspace = true
