[package]
name = "cpu-local"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cfg-if.workspace = true

[target.'cfg(any(target_arch = "riscv64", target_arch = "riscv32"))'.dependencies]
riscv.workspace = true

[lints]
workspace = true
