[package]
authors = ["The Cranelift Project Developers"]
name = "cranelift-frontend"
version = "0.108.0"
description = "Cranelift IR builder helper"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://docs.rs/cranelift-frontend"
categories = ["no-std"]
repository = "https://github.com/bytecodealliance/wasmtime"
readme = "README.md"
edition.workspace = true

[dependencies]
cranelift-codegen = { workspace = true }
target-lexicon = { workspace = true }
log = { workspace = true }
hashbrown = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
similar = { workspace = true }
