[package]
name = "ecma-119"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mycelium-bitfield.workspace = true
fallible-iterator.workspace = true
bitflags.workspace = true
zerocopy = { version = "0.8.39", default-features = false, features = ["derive"] }
# chrono = { version = "0.4.44", default-features = false }

[dev-dependencies]
memmap2 = "0.9.10"
rand = { workspace = true, default-features = true }
pretty_assertions = "1.4.1"

[features]
default = ["build"]
build = ["zerocopy/std"]

[lints]
workspace = true
